# badsecrets

./: .coveragerc  .dockerignore  Dockerfile  LICENSE  README.md  badsecrets.py  dirtysecrets.py  popsecrets.py  pyproject.toml  requirements.txt
.github/: dependabot.yml
.github/workflows/: lint.yaml  tests.yaml
badsecrets/: __init__.py  base.py  errors.py  helpers.py
badsecrets/examples/: blacklist3r.py  cli.py  symfony_knownkey.py  telerik_knownkey.py
badsecrets/modules/: aspnet_compressedviewstate.py  aspnet_resource.py  aspnet_viewstate.py  aspnet_vstate.py  django_signedcookies.py  express_signedcookies.py  express_signedcookies_cs.py  express_signedcookies_es.py  flask_signedcookies.py  flask_signingkey.py  generic_jwt.py  jsf_viewstate.py  laravel_signedcookies.py  peoplesoft_pstoken.py  rack2_signedcookies.py  rails6_signedcookies.py  rails_secretkeybase.py  symfony_signedurl.py  telerik_encryptionkey.py  telerik_hashkey.py  yii2_signedcookies.py
badsecrets/modules/active/: globalprotect.py  ltpa_token.py  shiro_rememberme.py
badsecrets/modules/passive/: aspnet_compressedviewstate.py  aspnet_resource.py  aspnet_viewstate.py  django_signedcookies.py  express_signedcookies_es.py  flask_signedcookies.py  generic_jwt.py  jsf_viewstate.py  laravel_signedcookies.py  ltpa_token.py  peoplesoft_pstoken.py  rack2_signedcookies.py  rails_secretkeybase.py  shiro_rememberme.py  symfony_signedurl.py  telerik_encryptionkey.py  telerik_hashkey.py
badsecrets/resources/: aspnet_machinekeys.txt  aspnet_machinekeys.txt.old  bad_values_for_tests.txt  django_secret_keys.txt  express_session_secrets.txt  flask_passwords.txt  flask_secret_keys.txt  globalprotect_masterkeys.txt  jsf_viewstate_passwords.txt  jsf_viewstate_passwords_b64.txt  jwt_rsakeys_private.txt  jwt_rsakeys_public.txt  jwt_secrets.txt  laravel_app_keys.txt  ltpa_active_keys.json  ltpa_keys.json  peoplesoft_passwords.txt  rack_secret_keys.txt  rails6_secret_key_base.txt  rails_secret_key_base.txt  shiro_active_keys.txt  shiro_keys.txt  symfony_appsecret.txt  telerik_encryption_keys.txt  telerik_hash_keys.txt  telerik_upload_keys.txt  top_100000_passwords.txt  top_10000_passwords.txt  yii2_cookieValidationKeys.txt
examples/: blacklist3r.py  cli.py  symfony_knownkey.py  telerik_knownkey.py
resources/: peoplesoft_passwords.txt
tests/: __init__.py  active_base_test.py  all_modules_test.py  aspnet_compressedviewstate_test.py  aspnet_resource_test.py  aspnet_viewstate_test.py  aspnet_vstate_test.py  carve_test.py  cli_active_test.py  conftest.py  django_signedcookies_test.py  django_test.py  error_handling_test.py  examples_blacklist3r_test.py  examples_cli_test.py  examples_symfony_signedurl_test.py  examples_telerik_knownkey_test.py  express_signedcookies_test.py  flask_signedcookies_test.py  flask_signingkey_test.py  flask_test.py  generic_jwt_test.py  globalprotect_test.py  jsf_viewstate_test.py  laravel_signedcookies_test.py  ltpa_active_test.py  ltpa_token_test.py  main_test.py  misc_test.py  module_consistency_test.py  peoplesoft_pstoken_test.py  peoplesoft_test.py  rack2_signedcookies_test.py  rails6_signedcookies_test.py  rails_secretkeybase_test.py  shiro_active_test.py  shiro_rememberme_test.py  symfony_signedurl_test.py  telerik_decryptionkey_test.py  telerik_hash_key_test.py  (+3 more)
tests/resources/: aspnet_viewstate_bad.txt  telerik_hash_keys_bad.txt
