[project]
name = "badsecrets"
dynamic = ["version"]
description = "A library for detecting known or weak secrets across many platforms"
authors = [{name = "liquidsec", email = "paul.mueller@blacklanternsecurity.com"}]
license = "GPL-3.0"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pycryptodome>=3.21.0",
    "flask-unsign>=1.2.1",
    "Django>=4.1.2,<6.0.0",
    "pyjwt[crypto]>=2.6.0",
    "httpx>=0.27,<1.0",
    "colorama>=0.4.6",
    "yara-python>=4.2.0",
]

[project.urls]
Repository = "https://github.com/blacklanternsecurity/badsecrets"
Homepage = "https://github.com/blacklanternsecurity/badsecrets"

[project.scripts]
badsecrets = "badsecrets.examples.cli:main"
telerik-knownkey = "badsecrets.examples.telerik_knownkey:main"
symfony-knownkey = "badsecrets.examples.symfony_knownkey:main"

[dependency-groups]
dev = [
    "respx>=0.21,<1.0",
    "pytest>=8.3.4,<10.0.0",
    "pytest-cov>=6.1.1,<8.0.0",
    "mock>=5.1.0",
    "pytest-mock>=3.10.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.version]
path = "badsecrets/__version__.py"

[tool.hatch.build.targets.sdist]
include = ["badsecrets/**"]

[tool.hatch.build.targets.wheel]
packages = ["badsecrets"]

[tool.ruff]
line-length = 119

[tool.ruff.lint]
select = [
    "F",      # Pyflakes
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "UP",     # pyupgrade
    "B",      # flake8-bugbear
    "SIM",    # flake8-simplify
    "ISC",    # flake8-implicit-str-concat
    "PIE",    # flake8-pie
    "C4",     # flake8-comprehensions
]
ignore = [
    "F403",   # star imports (used for module loading)
    "F405",   # may be undefined from star import
    "F541",   # f-string without placeholders
    "E501",   # line too long (handled by formatter)
    "E402",   # module import not at top (intentional for circular imports)
    "E741",   # ambiguous variable name
    "E712",   # true-false comparison (common in tests)
    "SIM102", # collapsible-if (often less readable)
    "SIM103", # needless-bool (explicit returns are clearer)
    "SIM105", # suppressible-exception (already using suppress where appropriate)
    "SIM108", # if-else-block-instead-of-if-exp (readability preference)
    "SIM113", # enumerate-for-loop (readability preference with generators)
    "SIM117", # multiple-with-statements (readability preference)
]
